a little more wombling on day one part 2 to try to make it less shit but i am too tired

--- a/day1/part2/Makefile
+++ b/day1/part2/Makefile
@@ -2,9 +2,12 @@ default:
 
 	gcc -Wall -Werror -pedantic main.c -o main
 clean:
-	rm -rf main
+	rm -rf main nain
 
 run:
 
 	gcc -Wall -Werror -pedantic main.c -o main
 	./main
+nain:
+	
+	gcc -Wall -Werror -pedantic nain.c -o nain
